# protoc-ddl

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  build.star  column.go  ddl.pb.go  ddl.proto  dialect.go  genddl.pb.go  genddl.proto  generator.go  go.mod  go.sum  mysql.go  plugin.go  readiness.go
.build/: test.cue
.ijwb/: .bazelproject
cmd/migrate/: BUILD.bazel  main.go
cmd/protoc-gen-dao/: BUILD.bazel  main.go
cmd/protoc-gen-dao-mock/: BUILD.bazel  main.go
cmd/protoc-gen-ddl/: BUILD.bazel  main.go
cmd/protoc-gen-entity/: BUILD.bazel  main.go
internal/generator/: BUILD.bazel  buffer.go  dao.go  dao_test.go  entity.go  generator.go  mock.go  mysql.go  mysql_test.go  plugin.go  util.go  util_test.go
internal/migrate/: BUILD.bazel  diff.go  migrate.go
internal/schema/: BUILD.bazel  plugin.go  plugin_test.go
mock/: BUILD.bazel  mock.go
probe/: BUILD.bazel
rules/: BUILD.bazel  def.bzl
rules/tools/schema_hash/: BUILD.bazel  main.go
sample/: BUILD.bazel  sample_test.go  schema.entity.go  schema.hash.go  schema.proto  schema.sql
sample/dao/: BUILD.bazel  dao_test.go  schema.dao.go
sample/dao/daotest/: BUILD.bazel  schema.mock.go
sample/test/: BUILD.bazel  dao_test.go
