load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix go.f110.dev/protoc-ddl
# gazelle:proto disable_global
# gazelle:resolve go go.f110.dev/protoc-ddl :go_default_library

gazelle(name = "gazelle")

proto_library(
    name = "ddl_proto",
    srcs = ["ddl.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "ddl_go_proto",
    importpath = "go.f110.dev/protoc-ddl",
    proto = ":ddl_proto",
    visibility = ["//visibility:public"],
)

load("//build:proto.bzl", "vendor_proto_source")

vendor_proto_source(
    name = "vendor_proto_source",
    src = ":ddl_go_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "column.go",
        "ddl.pb.go",
    ],
    importpath = "go.f110.dev/protoc-ddl",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/google.golang.org/protobuf/reflect/protoreflect:go_default_library",
        "//vendor/google.golang.org/protobuf/runtime/protoimpl:go_default_library",
        "//vendor/google.golang.org/protobuf/types/descriptorpb:go_default_library",
    ],
)
