load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# gazelle:prefix go.f110.dev/protoc-ddl
# gazelle:proto disable_global
# gazelle:resolve go go.f110.dev/protoc-ddl :protoc-ddl
# gazelle:go_naming_convention import

load("//build:proto.bzl", "vendor_proto_source")

gazelle(name = "gazelle")

proto_library(
    name = "ddl_proto",
    srcs = ["ddl.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "ddl_go_proto",
    importpath = "go.f110.dev/protoc-ddl",
    proto = ":ddl_proto",
    visibility = ["//visibility:public"],
)

vendor_proto_source(
    name = "vendor_proto_source",
    src = ":ddl_go_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protoc-ddl",
    srcs = [
        "column.go",
        "ddl.pb.go",
    ],
    importpath = "go.f110.dev/protoc-ddl",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
