bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.45.0")
bazel_dep(name = "protobuf", repo_name = "com_google_protobuf", version = "32.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.25.1")
