module(
    name = "protoc_ddl",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "protobuf", version = "32.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_proto", version = "7.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.25.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

go_deps.gazelle_default_attributes(build_file_generation = "clean")

use_repo(
    go_deps,
    "com_github_deckarep_golang_set_v2",
    "com_github_go_sql_driver_mysql",
    "com_github_pingcap_tidb_pkg_parser",
    "com_github_schemalex_schemalex",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "dev_f110_go_xerrors",
    "org_golang_google_protobuf",
)
