load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# gazelle:resolve go go.f110.dev/protoc-ddl/sample :go_default_library

load("//rules:def.bzl", "schema_dao", "schema_entity", "sql_schema", "vendor_ddl")

proto_library(
    name = "sample_proto",
    srcs = ["schema.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//:ddl_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "sample_go_proto",
    importpath = "go.f110.dev/protoc-ddl/sample",
    proto = ":sample_proto",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "schema.entity.go",
        "schema.hash.go",
    ],
    embed = [],  # keep
    importpath = "go.f110.dev/protoc-ddl/sample",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

sql_schema(
    name = "schema",
    importpath = "go.f110.dev/proto-ddl/sample",
    lang = "go",
    proto = ":sample_proto",
    with_hash = True,
)

vendor_ddl(
    name = "vendor_schema",
    src = ":schema",
)

schema_entity(
    name = "entity",
    lang = "go",
    proto = ":sample_proto",
)

vendor_ddl(
    name = "vendor_entity",
    src = ":entity",
)

go_test(
    name = "go_default_test",
    srcs = ["sample_test.go"],
    embed = [":go_default_library"],
)
