load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/migrate",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/migrate:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/go.f110.dev/xerrors:go_default_library",
    ],
)

go_binary(
    name = "migrate",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "linux_amd64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = ":migrate",
    visibility = ["//visibility:public"],
)
