load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "migrate_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/migrate",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/migrate",
        "@com_github_spf13_pflag//:pflag",
        "@dev_f110_go_xerrors//:xerrors",
    ],
)

go_binary(
    name = "migrate",
    embed = [":migrate_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "linux_amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":migrate",
    visibility = ["//visibility:public"],
)
