load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/protoc-gen-dao-mock",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/generator:go_default_library",
        "//internal/schema:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/golang/protobuf/protoc-gen-go/plugin:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-dao-mock",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
