load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-dao_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/protoc-gen-dao",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/generator",
        "//internal/schema",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-dao",
    embed = [":protoc-gen-dao_lib"],
    visibility = ["//visibility:public"],
)
