load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/protoc-gen-ddl",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/generator:go_default_library",
        "//internal/schema:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_binary(
    name = "protoc-gen-ddl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
