load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/protoc-gen-ddl",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/generator:go_default_library",
        "//internal/schema:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/pluginpb:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-ddl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
