load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-ddl_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/protoc-gen-ddl",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/generator",
        "//internal/schema",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-ddl",
    embed = [":protoc-gen-ddl_lib"],
    visibility = ["//visibility:public"],
)
