load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/cmd/protoc-gen-entity",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/generator:go_default_library",
        "//internal/schema:go_default_library",
        "//vendor/google.golang.org/protobuf/proto:go_default_library",
        "//vendor/google.golang.org/protobuf/types/pluginpb:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-entity",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
