load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "buffer.go",
        "dao.go",
        "entity.go",
        "mock.go",
        "mysql.go",
        "util.go",
    ],
    importpath = "go.f110.dev/protoc-ddl/internal/generator",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/schema:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser/ast:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser/model:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser/opcode:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser/test_driver:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser/types:go_default_library",
        "//vendor/google.golang.org/protobuf/types/descriptorpb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dao_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/schema:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser/ast:go_default_library",
        "//vendor/github.com/pingcap/tidb/pkg/parser/test_driver:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/google.golang.org/protobuf/proto:go_default_library",
        "//vendor/google.golang.org/protobuf/types/descriptorpb:go_default_library",
    ],
)
