load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "generator",
    srcs = [
        "buffer.go",
        "dao.go",
        "entity.go",
        "mock.go",
        "mysql.go",
        "util.go",
    ],
    importpath = "go.f110.dev/protoc-ddl/internal/generator",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/schema",
        "@com_github_pingcap_tidb_pkg_parser//:parser",
        "@com_github_pingcap_tidb_pkg_parser//ast",
        "@com_github_pingcap_tidb_pkg_parser//opcode",
        "@com_github_pingcap_tidb_pkg_parser//test_driver",
        "@com_github_pingcap_tidb_pkg_parser//types",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_test(
    name = "generator_test",
    srcs = [
        "dao_test.go",
        "util_test.go",
    ],
    embed = [":generator"],
    deps = [
        "//internal/schema",
        "@com_github_pingcap_tidb_pkg_parser//:parser",
        "@com_github_pingcap_tidb_pkg_parser//ast",
        "@com_github_pingcap_tidb_pkg_parser//test_driver",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
