load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "migrate.go",
    ],
    importpath = "go.f110.dev/protoc-ddl/internal/migrate",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/generator:go_default_library",
        "//internal/schema:go_default_library",
        "//vendor/github.com/deckarep/golang-set/v2:go_default_library",
        "//vendor/github.com/go-sql-driver/mysql:go_default_library",
        "//vendor/github.com/schemalex/schemalex:go_default_library",
        "//vendor/github.com/schemalex/schemalex/format:go_default_library",
        "//vendor/github.com/schemalex/schemalex/model:go_default_library",
        "//vendor/go.f110.dev/xerrors:go_default_library",
    ],
)
