load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = [
        "diff.go",
        "migrate.go",
    ],
    importpath = "go.f110.dev/protoc-ddl/internal/migrate",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/generator",
        "//internal/schema",
        "@com_github_deckarep_golang_set_v2//:golang-set",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_schemalex_schemalex//:schemalex",
        "@com_github_schemalex_schemalex//format",
        "@com_github_schemalex_schemalex//model",
        "@dev_f110_go_xerrors//:xerrors",
    ],
)
