load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["plugin.go"],
    importpath = "go.f110.dev/protoc-ddl/internal/schema",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_default_library",
        "//vendor/google.golang.org/protobuf/proto:go_default_library",
        "//vendor/google.golang.org/protobuf/types/descriptorpb:go_default_library",
        "//vendor/google.golang.org/protobuf/types/pluginpb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["plugin_test.go"],
    embed = [":go_default_library"],
)
