load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "schema",
    srcs = ["plugin.go"],
    importpath = "go.f110.dev/protoc-ddl/internal/schema",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:protoc-ddl",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_test(
    name = "schema_test",
    srcs = ["plugin_test.go"],
    embed = [":schema"],
)
