load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//rules:def.bzl", "schema_dao", "vendor_ddl")

schema_dao(
    name = "dao",
    lang = "go",
    proto = "//sample:sample_proto",
)

vendor_ddl(
    name = "vendor_dao",
    src = ":dao",
)

go_library(
    name = "go_default_library",
    srcs = ["schema.dao.go"],
    importpath = "go.f110.dev/protoc-ddl/sample/dao",
    visibility = ["//visibility:public"],
    deps = [
        "//sample:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["dao_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//sample:go_default_library",
        "//sample/dao/daotest:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
