load("@rules_go//go:def.bzl", "go_library")
load("//rules:def.bzl", "schema_dao", "vendor_ddl")

schema_dao(
    name = "dao",
    lang = "go",
    proto = "//sample:sample_proto",
)

vendor_ddl(
    name = "vendor_dao",
    src = ":dao",
)

go_library(
    name = "go_default_library",
    srcs = ["schema.dao.go"],
    importpath = "go.f110.dev/protoc-ddl/sample/dao",
    visibility = ["//visibility:public"],
    deps = ["//sample:go_default_library"],
)
