load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["dao_test.go"],
    deps = [
        "//sample:go_default_library",
        "//sample/dao/daotest:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
