load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["dao_test.go"],
    deps = [
        "//sample",
        "//sample/dao/daotest",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "test_test",
    srcs = ["dao_test.go"],
    deps = [
        "//sample",
        "//sample/dao/daotest",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
