load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/protoc-ddl/rules/tools/schema_hash",
    visibility = ["//visibility:private"],
    deps = ["@com_github_spf13_pflag//:go_default_library"],
)

go_binary(
    name = "schema_hash",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
